--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -6,7 +6,10 @@ interface Props {
   description?: string | undefined;
 }
 
-const { title = "Title", description = "Description" } = Astro.props;
+const {
+  title = "Jeffrey de Roode • JDR productions • Freelance Producer Rotterdam",
+  description = "Jeffrey de Roode is a Rotterdam based freelance producer and project manager specialized in film, documentaries and other creative concepts.",
+} = Astro.props;
 ---
 
 <meta charset="UTF-8" />
@@ -19,32 +22,6 @@ const { title = "Title", description = "Description" } = Astro.props;
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap"
   rel="stylesheet"
 />
-
-<!-- <script is:inline>
-  // This code is inlined in the head to make dark mode instant & blocking.
-  const getThemePreference = () => {
-    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
-      return localStorage.getItem("theme");
-    }
-    return window.matchMedia("(prefers-color-scheme: dark)").matches
-      ? "dark"
-      : "light";
-  };
-  const isDark = getThemePreference() === "dark";
-  document.documentElement.classList[isDark ? "add" : "remove"]("theme-dark");
-
-  if (typeof localStorage !== "undefined") {
-    // Watch the document element and persist user preference when it changes.
-    const observer = new MutationObserver(() => {
-      const isDark = document.documentElement.classList.contains("theme-dark");
-      localStorage.setItem("theme", isDark ? "dark" : "light");
-    });
-    observer.observe(document.documentElement, {
-      attributes: true,
-      attributeFilter: ["class"],
-    });
-  }
-</script> -->
