--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,110 +3,52 @@
 // https://docs.astro.build/en/core-concepts/layouts/
 
 // Component Imports
+import MainHead from "../components/MainHead.astro";
 import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
+import ThemeToggle from "../components/ThemeToggle.astro";
 
 interface Props {
-  title: string;
+  title?: string | undefined;
+  description?: string | undefined;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
-<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="Jeffrey de Roode is a Rotterdam based freelance producer and project manager specialized in film, documentaries and other creative concepts."
-    />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
+  <ThemeToggle />
+  <div class="color-scheme-wrapper">
+    <head>
+      <MainHead title={title} description={description} />
+    </head>
+    <body>
+      <Nav />
+      <main>
+        <slot />
+      </main>
 
-    <link rel="icon" href="assets/favicon/jdr-favicon-color-01.png" />
-    <link
-      rel="apple-touch-icon"
-      href="assets/favicon/jdr-favicon-color-01.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="assets/favicon/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="assets/favicon/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
-    <meta name="msapplication-TileColor" content="#2d89ef" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta
-      name="google-site-verification"
-      content="6MZJYmhO3FKnSQRvcmVTMB9XD5OFppxtziO8Mivs-vk"
-    />
+      <Footer />
+    </body>
 
-    <meta
-      property="og:title"
-      content="Jeffrey de Roode • JDR productions • Producer"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jeffreyderoode.nl/" />
-    <meta
-      property="og:description"
-      content="Rotterdam based producer of films and more. "
-    />
-    <meta
-      property="og:image"
-      content="https://jeffreyderoode.nl/assets/images/jdr-share-default.png"
-    />
+    <script>
+      // Add “loaded” class once the document has completely loaded.
+      addEventListener("load", () =>
+        document.documentElement.classList.add("loaded")
+      );
+    </script>
 
-    <title>{title}</title>
-  </head>
-  <body>
-    <Nav />
-    <slot />
-  </body>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"></script>
+    <!-- <script src="assets/scripts/preloader.js"></script> -->
+
+    <!-- <script src="./assets/scripts/owl.carousel.min.js"></script> -->
+    <!-- <script src="./assets/scripts/scripts.js"></script> -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-2966635-71"></script>
+  </div>
 </html>
-<style is:global>
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
-  }
-  html {
-    font-family: system-ui, sans-serif;
-    background: #13151a;
-    background-size: 224px;
-  }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
-  }
-</style>
