--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,212 +1,16 @@
 ---
-import Layout from "../layouts/BaseLayout.astro";
-import Card from "../components/Card.astro";
+// Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
+import BaseLayout from "../layouts/BaseLayout.astro";
+import Hero from "../components/Hero.astro";
+import ProjectList from "../components/ProjectList.astro";
 ---
 
-<Layout
-  title="Jeffrey de Roode • JDR productions • Freelance Producer Rotterdam"
->
+<BaseLayout title="Jeffrey de Roode">
   <div id="content">
-    <main>
-      <div class="item logo">
-        <div class="contain">
-          <div class="parent">
-            <div class="animation"></div>
-          </div>
-          <!-- <img src="../assets/logo-jdr-02-outline.svg" class="centered" />
-          <video src="../assets/video/test.mp4" autoplay loop playsinline muted></video> -->
-        </div>
-      </div>
-      <div class="item intro">
-        <p>
-          As a film producer I work on projects that inspire me. Next to film
-          there are multiple ways to tell stories. I’m open to all of them.
-        </p>
-        <p>
-          My goal is to turn creative ideas and stories into something concrete.
-          The support I provide varies from consultancy, concepting or
-          fundraising all the way to fully producing documentaries, commercials
-          and films from A to Z.
-        </p>
-        <p class="small">
-          Whenever I’m not working you’ll most likely find me travelling the
-          world. If you want to know what I’m up to, feel free to take a
-          <a
-            href="https://www.instagram.com/jeffreyderoode/"
-            rel="noopener"
-            target="_blank">peek!</a
-          >
-        </p>
-      </div>
-    </main>
-
-    <div id="projects">
-      <section class="project koala">
-        <h3>Film</h3>
-        <h2>Koala Koncepts</h2>
-        <div class="media owl-carousel owl-theme">
-          <!-- <div class="item-video" data-merge="1"><a class="owl-video" href="https://vimeo.com/267286797"></a></div> -->
-          <div class="item">
-            <img src="../assets/koala-01.jpg" alt="Koala Concepts" />
-          </div>
-          <div class="item">
-            <img src="../assets/koala-02.jpg" alt="Koala Concepts" />
-          </div>
-          <div class="item">
-            <img src="../assets/koala-03.jpg" alt="Koala Concepts" />
-          </div>
-          <!-- <div>
-            <img src="../assets/koala-04.jpg" alt="Koala Concepts" />
-          </div> -->
-        </div>
-        <p>
-          <a href="https://www.koalakoncepts.nl" rel="noopener" target="_blank"
-            >Koala Koncepts</a
-          > is a Rotterdam based film production company that produces
-          commercials and <a
-            href="https://koalakorporates.nl/"
-            rel="noopener"
-            target="_blank">corporate</a
-          > films. As a producer I’m involved in most of the projects as well as
-          all other daily activities.
-        </p>
-      </section>
-
-      <section class="project tlof">
-        <h3>Documentary</h3>
-        <h2>The Life of Fathers</h2>
-        <div class="media owl-carousel owl-theme">
-          <div>
-            <img src="../assets/tlof-01.jpg" alt="The Life of Fathers" />
-          </div>
-          <div>
-            <img src="../assets/tlof-02.jpg" alt="The Life of Fathers" />
-          </div>
-          <div>
-            <img src="../assets/tlof-03.jpg" alt="The Life of Fathers" />
-          </div>
-        </div>
-        <p>
-          The Life of Fathers by Dutch photographer <a
-            href="https://www.instagram.com/marwanmagroun/"
-            rel="noopener"
-            target="_blank">Marwan Magroun</a
-          > tells the story of single fathers with migration backgrounds. The
-          project started with a documentary that premiered at IFFR and will
-          result in photo expositions, talks and much more. I’ve produced the
-          documentary, the exposition and everything related.
-        </p>
-      </section>
-
-      <section class="project free">
-        <h3>Film</h3>
-        <h2>Free Work</h2>
-        <div class="media owl-carousel owl-theme">
-          <div>
-            <img
-              src="../assets/free-work-01.jpg"
-              alt="The Far Reach • 48 Hour Film Project"
-            />
-          </div>
-          <div>
-            <img
-              src="../assets/free-work-02.jpg"
-              alt="Rotterdam International"
-            />
-          </div>
-          <div>
-            <img
-              src="../assets/free-work-03.jpg"
-              alt="The Far Reach • 48 Hour Film Project"
-            />
-          </div>
-        </div>
-        <p>
-          A big part of my time is spent on free work and passion projects. Over
-          the years I’ve worked on short films, music videos, a graduation film
-          and <a href="https://vimeo.com/jeffreyderoode" target="_blank">more</a
-          >.
-        </p>
-      </section>
-
-      <section class="project iffr">
-        <h3>Documentary</h3>
-        <h2>IFFR</h2>
-        <div class="media">
-          <img src="../assets/iffr-01.png" alt="IFFR" />
-        </div>
-        <p>
-          <a href="https://iffr.com" rel="noopener" target="_blank"
-            >International Film Festival Rotterdam</a
-          > is a world renowned film festival that will celebrate its 50th
-          anniversary during the upcoming edition. I’m proud to work on
-          assignments for the development department, the team responsible for
-          relationship management and funding.
-        </p>
-      </section>
-    </div>
+    <Hero />
+    <ProjectList />
     <div id="contact"></div>
   </div>
+</BaseLayout>
 
-  <style>
-    main {
-      margin: auto;
-      padding: 1rem;
-      width: 800px;
-      max-width: calc(100% - 2rem);
-      color: white;
-      font-size: 20px;
-      line-height: 1.6;
-    }
-    .astro-a {
-      position: absolute;
-      top: -32px;
-      left: 50%;
-      transform: translatex(-50%);
-      width: 220px;
-      height: auto;
-      z-index: -1;
-    }
-    h1 {
-      font-size: 4rem;
-      font-weight: 700;
-      line-height: 1;
-      text-align: center;
-      margin-bottom: 1em;
-    }
-    .text-gradient {
-      background-image: var(--accent-gradient);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-size: 400%;
-      background-position: 0%;
-    }
-    .instructions {
-      margin-bottom: 2rem;
-      border: 1px solid rgba(var(--accent-light), 25%);
-      background: linear-gradient(
-        rgba(var(--accent-dark), 66%),
-        rgba(var(--accent-dark), 33%)
-      );
-      padding: 1.5rem;
-      border-radius: 8px;
-    }
-    .instructions code {
-      font-size: 0.8em;
-      font-weight: bold;
-      background: rgba(var(--accent-light), 12%);
-      color: rgb(var(--accent-light));
-      border-radius: 4px;
-      padding: 0.3em 0.4em;
-    }
-    .instructions strong {
-      color: rgb(var(--accent-light));
-    }
-    .link-card-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-      gap: 2rem;
-      padding: 0;
-    }
-  </style>
-</Layout>
+<style></style>
