--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -1,106 +1,14 @@
 ---
+import { getCollection } from "astro:content";
+import { Debug } from "astro:components";
+
+const projects = (await getCollection("projects"))
+  .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
+  .slice(0, 4);
+
 import ProjectItem from "./ProjectItem.astro";
 ---
 
 <div id="projects" class="w-full z-10 grid gap-y-vw-10">
-  <ProjectItem
-    title="Project"
-    client="Client"
-    description="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa dolore magni nesciunt veniam, voluptatem commodi aspernatur explicabo, natus praesentium numquam, molestias ut architecto? Sapiente quia totam necessitatibus, laudantium officia quo!"
-  />
-  <ProjectItem
-    title="Project"
-    client="Client"
-    description="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa dolore magni nesciunt veniam, voluptatem commodi aspernatur explicabo, natus praesentium numquam, molestias ut architecto? Sapiente quia totam necessitatibus, laudantium officia quo!"
-  />
-  <ProjectItem
-    title="Project"
-    client="Client"
-    description="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa dolore magni nesciunt veniam, voluptatem commodi aspernatur explicabo, natus praesentium numquam, molestias ut architecto? Sapiente quia totam necessitatibus, laudantium officia quo!"
-  />
-  <ProjectItem
-    title="Project"
-    client="Client"
-    description="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa dolore magni nesciunt veniam, voluptatem commodi aspernatur explicabo, natus praesentium numquam, molestias ut architecto? Sapiente quia totam necessitatibus, laudantium officia quo!"
-  />
-
-  <!-- 
-  <section class="project tlof">
-    <h3>Documentary</h3>
-    <h2>The Life of Fathers</h2>
-    <div class="media owl-carousel owl-theme">
-      <div>
-        <img src="../assets/images/tlof-01.jpg" alt="The Life of Fathers" />
-      </div>
-      <div>
-        <img src="../assets/images/tlof-02.jpg" alt="The Life of Fathers" />
-      </div>
-      <div>
-        <img src="../assets/images/tlof-03.jpg" alt="The Life of Fathers" />
-      </div>
-    </div>
-    <p>
-      The Life of Fathers by Dutch photographer <a
-        href="https://www.instagram.com/marwanmagroun/"
-        rel="noopener"
-        target="_blank">Marwan Magroun</a
-      > tells the story of single fathers with migration backgrounds. The
-      project started with a documentary that premiered at IFFR and will result
-      in photo expositions, talks and much more. I’ve produced the documentary,
-      the exposition and everything related.
-    </p>
-  </section>
-
-  <section class="project free">
-    <h3>Film</h3>
-    <h2>Free Work</h2>
-    <div class="media owl-carousel owl-theme">
-      <div>
-        <img
-          src="../assets/images/free-work-01.jpg"
-          alt="The Far Reach • 48 Hour Film Project"
-        />
-      </div>
-      <div>
-        <img
-          src="../assets/images/free-work-02.jpg"
-          alt="Rotterdam International"
-        />
-      </div>
-      <div>
-        <img
-          src="../assets/images/free-work-03.jpg"
-          alt="The Far Reach • 48 Hour Film Project"
-        />
-      </div>
-    </div>
-    <p>
-      A big part of my time is spent on free work and passion projects. Over the
-      years I’ve worked on short films, music videos, a graduation film and <a
-        href="https://vimeo.com/jeffreyderoode"
-        target="_blank">more</a
-      >.
-    </p>
-  </section>
-
-  <section class="project iffr">
-    <h3>Documentary</h3>
-    <h2>IFFR</h2>
-    <div class="media">
-      <img src="../assets/images/iffr-01.png" alt="IFFR" />
-    </div>
-    <p>
-      <a href="https://iffr.com" rel="noopener" target="_blank"
-        >International Film Festival Rotterdam</a
-      > is a world renowned film festival that will celebrate its 50th
-      anniversary during the upcoming edition. I’m proud to work on assignments
-      for the development department, the team responsible for relationship
-      management and funding.
-    </p>
-  </section> -->
+  {projects.map((p) => <ProjectItem slug={p.slug} />)}
 </div>
-
-<style>
-  header {
-  }
-</style>
