--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,17 +2,17 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<header class="grid grid-cols-1 l:grid-cols-2 gap-0 bg-white">
+<header class="grid grid-cols-1 l:grid-cols-2 gap-0 pb-vw-4 bg-white">
   <div class="visual h-screen sticky top-0 flex items-center justify-center">
     <!-- <div class="animation w-1/2 aspect-square z-10"></div> -->
-    <img class="centered z-20" src="../assets/images/logo-jdr-02-outline.svg" />
+    <img class="centered z-10" src="../assets/images/logo-jdr-02-outline.svg" />
     <img
       class="w-full h-full absolute top-0 object-cover mix-blend-multiply z-10"
       src="./assets/images/portret-jeff-halftone.png"
       alt="Jeff"
     />
     <video
-      class="z-1"
+      class="z-5"
       src="../assets/video/03-test.mp4"
       autoplay
       loop
@@ -20,7 +20,7 @@ const currentYear = new Date().getFullYear();
       muted></video>
   </div>
 
-  <div class="item intro p-vw-8 py-vw-16">
+  <div class="item intro p-vw-8 pt-vw-32 pb-vw-8">
     <p class="text-4xl font-extrabold tracking-tight leading-tight tw">
       I'm a dedicated film producer fueled by a passion for bringing compelling
       stories to the screen. I thrive on diverse storytelling methods, welcoming
