--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -2,7 +2,7 @@
 import ProjectItem from "./ProjectItem.astro";
 ---
 
-<div id="projects" class="w-full z-10 grid gap-y-vw-10">
+<div id="projects" class="w-full z-10 grid gap-y-vw-10 pt-vw-4">
   <ProjectItem
     title="Project"
     client="Client"
