--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -4,8 +4,8 @@ const { title, client, description } = Astro.props;
 
 <section class="project w-full">
   <header class="grid grid-cols-2 gap-0 px-vw-8 py-vw-4">
-    <h3>{title}</h3>
-    <h2>{client}</h2>
+    <h3 class="text-base">{title}</h3>
+    <h2 class="text-base pl-vw-8">{client}</h2>
   </header>
   <div class="swiper">
     <div class="swiper-wrapper">
@@ -39,14 +39,21 @@ const { title, client, description } = Astro.props;
       </a>
     </p>
   </div>
-  <div class="px-vw-8 grid grid-cols-2 gap-0">
-    <p class="col-start-2 py-vw-4">
+  <div class="grid grid-cols-2 gap-0 px-vw-8 pb-vw-20">
+    <p class="col-start-2 text-base pl-vw-8">
       {description}
     </p>
   </div>
 </section>
 
 <style>
+  section {
+    position: relative;
+  }
+  header {
+    position: sticky;
+    top: 2rem;
+  }
   img {
     width: 100%;
     height: auto;
