--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,5 +1,5 @@
 <input id="color-mode" type="checkbox" name="color-mode" />
-<label for="color-mode">
+<label for="color-mode" class="bottom-vw-8 left-vw-8">
   <span class="dark-mode-hide">Dark Mode</span>
   <span class="light-mode-hide">Light Mode</span>
 </label>
@@ -60,7 +60,7 @@
     color: var(--bg);
     padding: 1rem;
     bottom: 1rem;
-    bottom: 1rem;
+    left: 1rem;
     display: flex;
     align-items: center;
     border-radius: 6px;
