--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -16,7 +16,7 @@ const imageAlts = entry.data.img_alts;
 ---
 
 <section class="project w-full grid">
-  <header class="grid grid-cols-2 gap-0 px-vw-8 py-vw-4 bg-red-400">
+  <header class="grid grid-cols-2 gap-0 px-vw-8 py-vw-4">
     <h3>{entry.data.type}</h3>
     <h2>{entry.data.title}</h2>
   </header>
@@ -30,14 +30,9 @@ const imageAlts = entry.data.img_alts;
     }
   </Carousel>
 
-  <div class="px-vw-8 grid grid-cols-2 gap-0 bg-red-400">
-    <p class="col-start-2 py-vw-4">
-      <Content />
-    </p>
-  </div>
   <div class="grid grid-cols-2 gap-0 px-vw-8 pb-vw-20">
     <p class="col-start-2 text-base pl-vw-8">
-      {description}
+      <Content />
     </p>
   </div>
 </section>
