--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -1,5 +1,6 @@
 ---
 import { getEntry } from "astro:content";
+import Carousel from "../components/Carousel.astro";
 
 interface Props {
   slug: string;
