random CSS footer and content en header stuff

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -16,9 +16,9 @@ const textLinks: { label: string; href: string }[] = [
     </h1>
   </div>
   <div class="menu flex items-center justify-between pl-vw-8">
-    <a class="text-base js-anchor-link" href="#content">about</a>
-    <a class="text-base js-anchor-link" href="#projects">work</a>
-    <a class="text-base js-anchor-link" href="#contact">contact</a>
+    <a class="text-base js-anchor-link text-base" href="#content">about</a>
+    <a class="text-base js-anchor-link text-base" href="#projects">work</a>
+    <a class="text-base js-anchor-link text-base" href="#contact">contact</a>
   </div>
 </nav>
 
