--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -1,52 +1,51 @@
 ---
-import { getEntry } from "astro:content";
-import Carousel from "../components/Carousel.astro";
+import { getEntry } from 'astro:content';
+import Carousel from '../components/Carousel.astro';
 
 interface Props {
-  slug: string;
+	slug: string;
 }
 
 const { slug } = Astro.props;
 
-const entry = await getEntry("projects", slug);
+const entry = await getEntry('projects', slug);
 const { Content } = await entry.render();
 
-const images = entry.data.imgs;
-const imageAlts = entry.data.img_alts;
+const { imgs: images, img_alts: imageAlts, type, title } = entry.data;
 ---
 
 <section class="project w-full grid">
-  <header class="grid grid-cols-2 gap-0 px-vw-8 py-vw-4">
-    <h3>{entry.data.type}</h3>
-    <h2 class="col-start-2 text-base pl-vw-8">{entry.data.title}</h2>
-  </header>
-  <Carousel slug={slug}>
-    {
-      images.map((image: string, index: number) => (
-        <div class="swiper-slide">
-          <img src={image} alt={imageAlts[index]} />
-        </div>
-      ))
-    }
-  </Carousel>
-  <div class="grid grid-cols-2 gap-0 px-vw-8 pb-vw-20">
-    <p class="col-start-2 text-base pl-vw-8">
-      <Content />
-    </p>
-  </div>
+	<header class="grid grid-cols-2 gap-0 px-vw-8 py-vw-4">
+		<h3 class="text-sm">{entry.data.type}</h3>
+		<h2 class="col-start-2 text-sm pl-vw-8">{entry.data.title}</h2>
+	</header>
+	<Carousel slug={slug}>
+		{
+			images.map((image: string, index: number) => (
+				<div class="swiper-slide">
+					<img src={image} alt={imageAlts[index]} />
+				</div>
+			))
+		}
+	</Carousel>
+	<div class="grid grid-cols-2 gap-0 px-vw-8 pb-vw-20">
+		<div class="col-start-2 pl-vw-8 py-vw-4"><Content /></div>
+	</div>
 </section>
 
 <style>
-  section {
-    position: relative;
-  }
-  header {
-    position: sticky;
-    top: 2rem;
-    z-index: 10;
-  }
-  img {
-    width: 100%;
-    height: auto;
-  }
+	section {
+		position: relative;
+	}
+	header {
+		position: sticky;
+		top: 2rem;
+		z-index: 10;
+		mix-blend-mode: exclusion;
+		color: white;
+	}
+	img {
+		width: 100%;
+		height: auto;
+	}
 </style>
