--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,12 +2,12 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="px-vw-8 pt-vw-20 pb-vw-4 grid gap-vw-8">
+<footer class="grid px-vw-8 pt-vw-24 pb-vw-8 gap-vw-12">
 	<p class="text-4xl font-extrabold tracking-tight">
 		Do you want to collaborate? <br />Get in touch!
 	</p>
-	<div class="contact grid grid-cols-4">
-		<ul class="col-span-2" itemscope itemtype="http://schema.org/Person">
+	<div class="grid grid-cols-1 gap-vw-12 contact md:grid-cols-4">
+		<ul class="md:col-span-2" itemscope itemtype="http://schema.org/Person">
 			<li itemprop="name">Jeffrey de Roode</li>
 			<li itemprop="jobTitle">Producer</li>
 			<li>
