--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,12 +2,12 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<header class="grid grid-cols-1 l:grid-cols-2 gap-0 bg-white">
-	<div class="visual h-screen sticky top-0 flex items-center justify-center">
-		<!-- <div class="animation w-1/2 aspect-square z-10"></div> -->
-		<img class="centered z-10" src="../assets/images/logo-jdr-02-outline.svg" />
+<header class="gap-0 bg-white md:grid l:grid-cols-2">
+	<div class="sticky flex items-center justify-center visual md:h-screen sm:relative md:top-0">
+		<!-- <div class="z-10 w-1/2 animation aspect-square"></div> -->
+		<img class="z-10 centered" src="../assets/images/logo-jdr-02-outline.svg" />
 		<img
-			class="w-full h-full absolute top-0 object-cover mix-blend-multiply z-10"
+			class="absolute top-0 z-10 object-cover w-full h-full mix-blend-multiply"
 			src="./assets/images/portret-jeff-halftone.png"
 			alt="Jeff"
 		/>
@@ -15,7 +15,7 @@ const currentYear = new Date().getFullYear();
 	</div>
 
 	<div class="item intro p-vw-8 pt-vw-32 pb-vw-12">
-		<p class="text-3xl font-extrabold tracking-tight leading-tight tw">
+		<p class="text-3xl font-extrabold leading-tight tracking-tight tw">
 			I'm a dedicated film producer fueled by a passion for bringing compelling stories to the
 			screen. I thrive on diverse storytelling methods, welcoming every avenue that leads to
 			inspiration.
@@ -48,6 +48,7 @@ const currentYear = new Date().getFullYear();
 	.visual {
 		background: var(--bg);
 		z-index: 10;
+		min-height: 50vh;
 		transition:
 			color var(--theme-transition),
 			background var(--theme-transition);
