--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ const currentYear = new Date().getFullYear();
 <header class="gap-0 bg-white md:grid l:grid-cols-2">
 	<div class="sticky flex items-center justify-center visual md:h-screen sm:relative md:top-0">
 		<!-- <div class="z-10 w-1/2 animation aspect-square"></div> -->
-		<img class="z-10 centered" src="../assets/images/logo-jdr-02-outline.svg" />
+		<img class="z-20 centered" src="../assets/images/logo-jdr-02-outline.svg" />
 		<img
 			class="absolute top-0 z-10 object-cover w-full h-full mix-blend-multiply"
 			src="./assets/images/portret-jeff-halftone.png"
@@ -58,7 +58,7 @@ const currentYear = new Date().getFullYear();
 		background: url(./assets/images/logo-jdr-sprite.svg) no-repeat 0 0;
 		background-size: 100%;
 		animation: sprite 0.5s steps(4) infinite;
-		/* z-index: 2; */
+		z-index: 20;
 	}
 
 	@keyframes sprite {
