final video edit

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ const currentYear = new Date().getFullYear();
 			src="./assets/images/portret-jeff-halftone.png"
 			alt="Jeff"
 		/>
-		<video class="z-5" src="../assets/video/03-test.mp4" autoplay loop playsinline muted></video>
+		<video class="z-5" src="./assets/video/03-test.mp4" autoplay loop playsinline muted></video>
 	</div>
 
 	<div class="item intro p-vw-8 pt-vw-32 pb-vw-12">
