--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,24 +1,26 @@
 ---
-/** Main menu items */
+/** Main menu items - Verplaatsen naar const */
 const textLinks: { label: string; href: string }[] = [
-	{ label: 'home', href: '/' },
-	{ label: 'work', href: '#content' },
-	{ label: 'about', href: '#projects' },
+	{ label: 'about', href: '#content' },
+	{ label: 'work', href: '#projects' },
 	{ label: 'contact', href: '#contact' },
 ];
 ---
 
 <nav class="outer w-full grid grid-cols-2 px-vw-8 py-vw-4 fixed z-50">
-	<!-- <div class="inner grid grid-cols-2"> -->
 	<div class="brand">
 		<h1 class="text-base font-bold">
-			<a href="#content" class="js-anchor-link">Jeffrey de Roode</a>
+			<a href="#" class="js-anchor-link">Jeffrey de Roode</a>
 		</h1>
 	</div>
 	<div class="menu flex items-center justify-between pl-vw-8">
-		<a class="text-base" href="#contact">contact</a>
-		<a class="text-base" href="#content">about</a>
-		<a class="text-base" href="#projects">work</a>
+		{
+			textLinks.map((l) => (
+				<a class="text-base" href={l.href}>
+					{l.label}
+				</a>
+			))
+		}
 	</div>
 </nav>
 
